# clico

./: .gitattributes  .stylua.toml  Cargo.toml  README.md  input.toml
generator/: Cargo.toml  build.rs
generator/src/: main.rs  nvim.rs
lua/clico/: data.lua  init.lua
