[package]
name = "generator"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde = {version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse", "preserve_order"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2.4", features = ["serde"] }
lab = "0.11"
rgb2ansi256 = "0.1"
heck = "0.5"

[build-dependencies]
anyhow.workspace = true
